fix: update thumbnail load failure message and adjust text shadow for better visibility

--- a/src/styles/shelf.module.css
+++ b/src/styles/shelf.module.css
@@ -67,5 +67,5 @@
     position: relative;
     top: 35px;
     font-size: 16pt;
-    text-shadow: 0px 0px 5px #000000;
+    text-shadow: 0px 0px 5px #00000020 inset;
 }
